# ss928

./: '@ + $zipPath + @'  .gitattributes  .gitignore  40pin_usage.md  AGENTS.md  YOLOv8移植到SS928板子详细教程.md  agent.md  handoff.md
在线仓库/modelzoo-master/operators/ascend_npu/: CMakeLists.txt  README.md  build.sh  requirements.txt  setup.py
在线仓库/modelzoo-master/operators/ascend_npu/cmake/: config.cmake  func.cmake  intf.cmake  retry.sh
在线仓库/modelzoo-master/operators/ascend_npu/modelzoo_ops/: __init__.py
在线仓库/modelzoo-master/operators/ascend_npu/modelzoo_ops/_ext_src/: CMakeLists.txt
在线仓库/modelzoo-master/operators/ascend_npu/modelzoo_ops/_ext_src/include/: common.h  functions.h
在线仓库/modelzoo-master/operators/ascend_npu/modelzoo_ops/_ext_src/src/: cylinder_query.cpp  furthest_point_sampling.cpp  group_points.cpp  pybind.cpp
在线仓库/modelzoo-master/operators/ascend_npu/modelzoo_ops/framework/onnx_plugin/: CMakeLists.txt  cylinder_query.cpp  furthest_point_sampling.cpp  group_points.cpp
在线仓库/modelzoo-master/operators/ascend_npu/modelzoo_ops/ops/: cylinder_query.py  furthest_point_sampling.py  group_points.py
在线仓库/modelzoo-master/operators/ascend_npu/opensource/ascendsamples/: README.OpenSource
在线仓库/modelzoo-master/samples/built-in/classification/MobileNetV2/src/: CMakeLists.txt  main.cpp
在线仓库/modelzoo-master/samples/built-in/depth/LRStereo-B/src/: CMakeLists.txt  main.cpp
在线仓库/modelzoo-master/samples/built-in/point/SuperPoint/src/: CMakeLists.txt  main.cpp
在线仓库/modelzoo-master/samples/built-in/tracking/deepsort/src/: CMakeLists.txt  deepsort.cpp  deepsort.h  hungarian.cpp  hungarian.h  kalmanfilter.cpp  kalmanfilter.h  main.cpp  nn_matching.cpp  nn_matching.h  track.cpp  track.h  tracker.cpp  tracker.h
在线仓库/modelzoo-master/samples/common/: CMakeLists.txt
在线仓库/modelzoo-master/samples/common/cmake/: toolchain_aarch64_ohos.cmake  toolchain_aarch64_openeuler.cmake
在线仓库/modelzoo-master/samples/common/include/: infer_utils.h  log.h  model.h  utils.h
在线仓库/modelzoo-master/samples/common/infer/: infer_utils.cpp  model.cpp
在线仓库/modelzoo-master/samples/common/infer/platform/: dev_interface_adapter.h
在线仓库/modelzoo-master/samples/common/infer/platform/nnn/: nnn.cpp  nnn.h
在线仓库/modelzoo-master/samples/common/infer/platform/svp_nnn/: svp_nnn.cpp  svp_nnn.h
在线仓库/modelzoo-master/samples/common/infer/post_process/: clip_postprocess.cpp  clip_postprocess.h  codeformer_postprocess.cpp  codeformer_postprocess.h  crnn_postprocess.cpp  crnn_postprocess.h  crowdcount_postprocess.cpp  crowdcount_postprocess.h  deepsort_postprocess.cpp  deepsort_postprocess.h  depthanythingv2_postprocess.cpp  depthanythingv2_postprocess.h  facenet_postprocess.cpp  facenet_postprocess.h  fastspeech2_postprocess.cpp  fastspeech2_postprocess.h  graspnet_postprocess.cpp  graspnet_postprocess.h  hrnet_postprocess.cpp  hrnet_postprocess.h  minicpm_postprocess.cpp  minicpm_postprocess.h  ocr_det_postprocess.cpp  ocr_det_postprocess.h  ocr_rec_postprocess.cpp  ocr_rec_postprocess.h  pfld_postprocess.cpp  pfld_postprocess.h  pi0_postprocess.cpp  pi0_postprocess.h  post_process.cpp  post_process.h  siamese_postprocess.cpp  siamese_postprocess.h  superpoint_postprocess.cpp  superpoint_postprocess.h  superpoint_utils.cpp  superpoint_utils.h  vdsr_postprocess.cpp  vdsr_postprocess.h  (+4 more)
在线仓库/modelzoo-master/samples/common/infer/preprocess/: clip_preprocess.cpp  clip_preprocess.h  clip_txt_preprocess.cpp  clip_txt_preprocess.h  codeformer_preprocess.cpp  codeformer_preprocess.h  crnn_preprocess.cpp  crnn_preprocess.h  crowdcount_preprocess.cpp  crowdcount_preprocess.h  deepsort_preprocess.cpp  deepsort_preprocess.h  depthanythingv2_preprocess.cpp  depthanythingv2_preprocess.h  efficient_preprocess.cpp  efficient_preprocess.h  facenet_preprocess.cpp  facenet_preprocess.h  fastspeech2_preprocess.cpp  fastspeech2_preprocess.h  graspnet_preprocess.cpp  graspnet_preprocess.h  hrnet_preprocess.cpp  hrnet_preprocess.h  image_process.cpp  image_process.h  imresize_cpp.cpp  imresize_cpp.h  minicpm_preprocess.cpp  minicpm_preprocess.h  ocr_det_preprocess.cpp  ocr_det_preprocess.h  ocr_rec_preprocess.cpp  ocr_rec_preprocess.h  pfld_preprocess.cpp  pfld_preprocess.h  pi0_preprocess.cpp  pi0_preprocess.h  siamese_preprocess.cpp  siamese_preprocess.h  (+12 more)
在线仓库/modelzoo-master/samples/common/log/: log.cpp
在线仓库/modelzoo-master/samples/common/utils/: utils.cpp
在线仓库/modelzoo-master/samples/contribute/ACT/NNN/src/: CMakeLists.txt  main.cpp  model_porcess.cpp  sample_process.cpp  utils.cpp
在线仓库/modelzoo-master/samples/contribute/ACT/SVP_NNN/src/: CMakeLists.txt  main.cpp  model_process.cpp  protocol.cpp  sample_process.cpp  utils.cpp
在线仓库/pegasus-master/os/OpenHarmony/device/soc/hisilicon/common/hal/display/: BUILD.gn
在线仓库/pegasus-master/os/OpenHarmony/device/soc/hisilicon/common/hal/display/common/include/: display_gfx_internal.h  display_gralloc_internal.h  display_layer_internal.h  display_overlay_layer.h  vpss_resmng.h
在线仓库/pegasus-master/os/OpenHarmony/device/soc/hisilicon/common/hal/display/common/src/: bt1120.c  display_device.c  display_gfx.c  display_gralloc.c  display_layer.c  display_overlay_layer.c  hdmi.c  (+3 more)
在线仓库/pegasus-master/os/OpenHarmony/device/soc/hisilicon/common/hal/huks/: BUILD.gn
在线仓库/pegasus-master/os/OpenHarmony/device/soc/hisilicon/common/hal/media/: BUILD.gn  Makefile  build.sh
在线仓库/pegasus-master/os/OpenHarmony/device/soc/hisilicon/hi3403v100/sdk_linux/: 001_mpp.patch  002_trusted_firmware.patch  003_load_ss928v100_ohos.patch  BUILD.gn  build.sh  config.gni
补充资料/MR20毫米波雷达资料/1.ROS1_SDK/wheeltec_radar/: CMakeLists.txt  package.xml  radar_udev.sh
补充资料/MR20毫米波雷达资料/1.ROS1_SDK/wheeltec_radar/include/wheeltec_radar/: wheeltec_radar.hpp  wheeltec_radar_net.hpp
补充资料/MR20毫米波雷达资料/1.ROS1_SDK/wheeltec_radar/launch/: wheeltec_radar.launch  wheeltec_radar_net.launch
补充资料/MR20毫米波雷达资料/1.ROS1_SDK/wheeltec_radar/msg/: RadarDetectionArray.msg  RadarDetectionStamped.msg  RadarTrackArray.msg  RadarTrackStamped.msg
补充资料/MR20毫米波雷达资料/1.ROS1_SDK/wheeltec_radar/src/: wheeltec_radar.cpp  wheeltec_radar_net.cpp
(+3453 files in other folders)
