<?xml version="1.0"?>
<package format="2">
  <name>wheeltec_radar</name>
  <version>0.0.0</version>
  <description>ROS1 wheeltec_radar for wheeltec_robot</description>
  <maintainer email="wheeltec@todo.todo">wheeltec</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>serial</depend>
  <depend>radar_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>
  <export>
    <!-- ROS1 does not use build_type in package.xml -->
  </export>
</package>
